--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "browserify": "^16.1.0",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "pixi.js": "^4.7.0"
   }
 }
