--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "MIT",
   "devDependencies": {
     "browserify": "^16.1.0",
+    "copy-dir": "^0.3.0",
     "gulp": "^3.9.1",
-    "pixi.js": "^4.7.0"
+    "pixi.js": "^4.7.0",
+    "rimraf": "^2.6.2"
   }
 }
