--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "Sam Lynch",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babelify": "^8.0.0",
     "browserify": "^16.1.0",
     "copy-dir": "^0.3.0",
     "gulp": "^3.9.1",
     "pixi.js": "^4.7.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "uglifyify": "^4.0.5"
   }
 }
