--- a/package.json
+++ b/package.json
@@ -1,23 +1,74 @@
 {
   "name": "march22-js",
-  "version": "1.0.0",
-  "description": "March22 engine in JavaScript",
-  "main": "index.js",
+  "version": "0.0.0",
+  "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "gulp build"
+    "prettier": "npx prettier --single-quote --print-width 100 --tab-width 4 --use-tabs \"./src/**/*.js\" --write",
+    "dev": "npx webpack --config webpack.config.js",
+    "dev-server": "npx webpack-dev-server --config webpack.config.js"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-0"
+    ]
   },
   "author": "Sam Lynch",
   "license": "MIT",
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "plugins": [],
+    "rules": {
+      "no-console": "off",
+      "no-undef": 0,
+      "no-unused-vars": "warn",
+      "indent": [
+        "error",
+        "tab"
+      ],
+      "max-len": [
+        1,
+        120,
+        2,
+        {
+          "ignoreComments": true
+        }
+      ],
+      "prop-types": [
+        0
+      ]
+    },
+    "extends": [
+      "eslint:recommended"
+    ]
+  },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "@babel/plugin-transform-classes": "^7.0.0-beta.49",
+    "babel-core": "^6.23.1",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babelify": "^8.0.0",
-    "browserify": "^16.1.0",
-    "copy-dir": "^0.3.0",
-    "gulp": "^3.9.1",
-    "pixi.js": "^4.7.0",
-    "rimraf": "^2.6.2",
-    "uglifyify": "^4.0.5"
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-stage-0": "^6.0.15",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.10",
+    "eslint": "^4.19.1",
+    "eslint-loader": "^2.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "fbengine": "^0.7.3",
+    "file-loader": "^1.1.11",
+    "font-face-observer": "^1.0.0",
+    "html-webpack-plugin": "^3.0.6",
+    "js-easing-functions": "^1.0.2",
+    "pixi-sound": "^2.0.2",
+    "pixi.js": "^4.7.3",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.20.3",
+    "ttf-loader": "^1.0.2",
+    "webpack": "^3.10.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^2.4.1"
   }
 }
